# daqana

./: #daqprocessor.py#  ._CMakeLists.txt  ._src  .gitignore  .tmp  BG_template_builder.py  CMakeLists.txt  GNUMakefile  GNUMakefile~  MC_co60_modulation.root  MC_cs137_modulation.root  MC_ti44_modulation.root  README.md  ch0.root  ch_0.root  ch_1.root  daqana  daqana.cc  daqana.cc~  daqprocessor.py  daqprocessor.py~  daqprocessor_main.py  daqprocessor_single.py  daqprocessor_single_calibrate.py  gmon.out  install_cvmfs_centos7.sh  logfiles  make_template.py  setup_cvmfs_centos7.sh  setup_modexp_enironment.sh  slowdaq  slowdaq.cc  slowdaq.cc~
analysis/: README.md
analysis/calibration/: MC_co60_modulation.root  MC_cs137_modulation.root  MC_ti44_modulation.root  analyzer.C  analyzer.h  ecal.C  ecal.h
analysis/monitor/: calplot.C  fitspectrum.C  hvmon.C  lifetime.C  lifetime.h  monitor.C  resolution.C  specmon.C  stability.C
analysis/rates/: simulife.C
analyzer/: correlator.C  correlator.h  ecal.C  ecal.h  hvmon.C  monitor.C
include/: ._driver.hh  daq.hh  driver.hh  event.hh  event.hh~  rootdriver.hh  rootdriver.hh~  sdaq.hh  sdaq.hh~  sevent.hh  srootdriver.hh  srootdriver.hh~
old_scripts/: ch_1.root  check_data.sh  daqprocessor.py  daqprocessor_single_calibrate_edit.py
python/: processorlib.py
src/: daq.cc  daq.cc~  daq.cc~~  driver.cc  driver.cc~  event.cc  event.cc~  rootdriver.cc  rootdriver.cc~  sdaq.cc  sdaq.cc~  sevent.cc  srootdriver.cc  srootdriver.cc~
